Fixing z-index bug on index

--- a/main.scss
+++ b/main.scss
@@ -245,8 +245,8 @@ body > section {
   margin: 0 -15px;
   border-width: 1px;
   pointer-events: none;
-  z-index: 2000;
-  padding-top: 3.65em;
+  z-index: 1000;
+  padding-top: 3.69em;
 }
 @include media-breakpoint-up(md) {
   .nav-border {
